name:           lex-pass
version:        2.0
license:        BSD3
license-file:   LICENSE
author:         http://groups.google.com/group/lex-pass
synopsis:       perform lexically-aware transformational passes over a
                codebase, limiting number of files changed per run to try to
                minimize conflicts in a rapidly changing development
                environment
build-type:     Simple
cabal-version:  >= 1.6

flag test-only
  description: Build test executable instead of main program
  default:     False

executable lex-pass
  if flag(test-only)
    buildable: False
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  FUtil, HSH >= 2, MissingH, base >= 4, binary, bytestring,
                  containers, derive, directory, filepath, mtl, parsec == 3.*,
                  process, syb
  ghc-options:    -threaded

executable lex-pass-test
  if !flag(test-only)
    buildable: False
  hs-source-dirs: src
  main-is:        Lang/Php/Ast/Test.hs
  build-depends:  FUtil, HSH >= 2, base >= 4, binary, bytestring, containers,
                  derive, directory, filepath, mtl, parsec == 3.*, process, syb
  ghc-options:    -threaded

